--- a/text.css
+++ b/text.css
@@ -1,34 +1,58 @@
+h1,
+h2 {
+    margin: 0.5em 0;
+}
+
+p,
+ul,
+li {
+    margin: 0.5em 0;
+}
+
 .center-text {
     text-align: center;
 }
 
-body {
-    color: whitesmoke;
-}
-
 .unselectable {
     -webkit-user-select: none;
-    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
 
-a:link {
-    color: lightblue;
-    text-decoration: none;
+a {
+    transition: color 0.3s ease-in-out;
 }
 
+a:link,
 a:visited {
-    color: lightskyblue;
+    color: lightblue;
     text-decoration: none;
+    transition: color 0.3s ease;
 }
 
 a:hover {
     color: whitesmoke;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 li::marker {
     color: whitesmoke;
+}
+
+nav {
+    margin-bottom: 1.5em;
+}
+
+nav a {
+    text-decoration: none;
+    padding: 0 15px;
+    display: inline-block;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background: whitesmoke;
+    opacity: 0.5;
 }
