--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2,14 +2,15 @@
 
 body {
     display: grid;
-    color: white;
+    background-color: #333;
+    color: #f0f0f0;
     min-height: 100vh;
     margin: 0;
     padding: 1em;
 }
 
 #main {
-    background: black;
+    background-color: #555;
     padding: 1.5em;
     text-align: center;
     place-self: center;
