--- a/assets/style/colors.css
+++ b/assets/style/colors.css
@@ -16,7 +16,7 @@
     --dark-link-hover-color: #FFD700;
     --dark-button-text-color: var(--dark-body-bg);
     --dark-main-shadow-color: rgba(255, 255, 255, 0.1);
-    --dark-button-shadow-color: rgba(255, 255, 255, 0.08);
+    --dark-button-shadow-color:  #F4EAD5;
 }
 
 body.dark-mode {
@@ -27,5 +27,5 @@ body.dark-mode {
     --link-visited-color: var(--dark-link-visited-color);
     --link-hover-color: var(--dark-link-hover-color);
     --main-shadow-color: var(--dark-main-shadow-color);
-    --button-shadow-color: var(--dark-button-shadow-color);
+    --button-shadow-color: var(--dark-main-shadow-color);
 }
