--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2,6 +2,10 @@
 @import "colors.css";
 @import "toggletheme.css";
 
+:root {
+    color-scheme: light dark;
+}
+
 body {
     background-color: var(--body-bg);
     color: var(--text-color);
@@ -11,7 +15,7 @@ body {
     line-height: 1.6;
 }
 
-#main {
+main {
     box-shadow: var(--main-shadow-color) 0 3px 8px;
     border-radius: 1em;
     background-color: var(--main-bg);
@@ -21,7 +25,7 @@ body {
     padding: 2em;
 }
 
-#author-text {
+footer {
     margin: 10em auto;
     text-align: center;
 }
