--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,4 @@
-@import "text.css";
 @import "colors.css";
-@import "toggletheme.css";
 
 :root {
     color-scheme: light dark;
@@ -53,4 +51,9 @@ img {
     display: block;
     margin: auto;
     max-width: 100%;
+}
+
+nav ol {
+    list-style-type: none;
+    padding-left: 0;
 }
