--- a/assets/style/colors.css
+++ b/assets/style/colors.css
@@ -1,31 +1,1 @@
-:root {
-    --body-bg: #F4EAD5;
-    --text-color: #6B5B45;
-    --main-bg: #FAF0E6;
-    --link-color: #008B8B;
-    --link-visited-color: #CD5C5C;
-    --link-hover-color: #8B4513;
-    --button-text-color: var(--main-bg);
-    --main-shadow-color: rgba(0, 0, 0, 0.24);
-    --button-shadow-color: rgba(0, 0, 0, 0.1);
-    --dark-body-bg: #212529;
-    --dark-text-color: #D3D3C8;
-    --dark-main-bg: #343a40;
-    --dark-link-color: #DAA520;
-    --dark-link-visited-color: #B0C4DE;
-    --dark-link-hover-color: #FFD700;
-    --dark-button-text-color: var(--dark-body-bg);
-    --dark-main-shadow-color: rgba(255, 255, 255, 0.1);
-}
-
-body.dark-mode {
-    --body-bg: var(--dark-body-bg);
-    --text-color: var(--dark-text-color);
-    --main-bg: var(--dark-main-bg);
-    --link-color: var(--dark-link-color);
-    --link-visited-color: var(--dark-link-visited-color);
-    --link-hover-color: var(--dark-link-hover-color);
-    --main-shadow-color: var(--dark-main-shadow-color);
-    --button-shadow-color: var(--dark-main-shadow-color);
-    --button-text-color: var(--dark-button-text-color);
-}
+:root{--body-bg:#F4EAD5;--text-color:#6B5B45;--main-bg:#FAF0E6;--link-color:#008B8B;--link-visited-color:#CD5C5C;--link-hover-color:#8B4513;--button-text-color:var(--main-bg);--main-shadow-color:rgba(0, 0, 0, 0.24);--button-shadow-color:rgba(0, 0, 0, 0.1);--dark-body-bg:#212529;--dark-text-color:#D3D3C8;--dark-main-bg:#343a40;--dark-link-color:#DAA520;--dark-link-visited-color:#B0C4DE;--dark-link-hover-color:#FFD700;--dark-button-text-color:var(--dark-body-bg);--dark-main-shadow-color:rgba(255, 255, 255, 0.1)}body.dark-mode{--body-bg:var(--dark-body-bg);--text-color:var(--dark-text-color);--main-bg:var(--dark-main-bg);--link-color:var(--dark-link-color);--link-visited-color:var(--dark-link-visited-color);--link-hover-color:var(--dark-link-hover-color);--main-shadow-color:var(--dark-main-shadow-color);--button-shadow-color:var(--dark-main-shadow-color);--button-text-color:var(--dark-button-text-color)}
