--- a/dev/style/main.css
+++ b/dev/style/main.css
@@ -42,9 +42,18 @@ a:hover {
     text-decoration: underline;
 }
 
-a:focus {
-    outline: 2px solid var(--link-hover-color);
-    outline-offset: 2px;
+#places {
+    text-align: left;
+}
+
+#places ul {
+    display: inline-block;
+    text-align: left;
+}
+
+
+nav {
+    text-align: center;
 }
 
 img {
@@ -53,7 +62,6 @@ img {
     max-width: 100%;
 }
 
-nav ol {
-    list-style-type: none;
-    padding-left: 0;
+nav a {
+    margin: 1em;
 }
