--- a/dev/style/text.css
+++ b/dev/style/text.css
@@ -1,20 +1,24 @@
 @font-face {
     font-family: "monaspace-nano";
     src: url("../assets/font/MonaspaceNeon-Regular.woff2");
+    font-display: swap;
 }
 
 @font-face {
     font-family: "monaspace-nano-thin";
     src: url("../assets/font/MonaspaceNeon-Light.woff2");
+    font-display: swap;
 }
 
 @font-face {
     font-family: "monaspace-radon";
     src: url("../assets/font/MonaspaceRadon-Regular.woff2");
+    font-display: swap;
 }
 
 .radon-font {
     font-family: "monaspace-radon", cursive;
+
 }
 
 .thin-font {
