--- a/src/pages/aboutme/index.astro
+++ b/src/pages/aboutme/index.astro
@@ -1,8 +1,12 @@
 ---
-import Layout from "../../layout/Layout.astro";
+import Page from "../../layout/Page.astro";
 ---
-<Layout>
-    <h1>
-        Welcome to my website
-    </h1>
-</Layout>
+<Page title="😼 Kittech's place 😼">
+    <p class="neon-font left-text">
+        Hello, I'm kittech.
+        My hobby is programming and theology.
+        I'm right now student of IT and plan to become an IT specialist.
+        My favorite programming language is 🦀rust🦀 and
+        on my laptop I use Fedora Linux.
+    </p>
+</Page>
