--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layout/Layout.astro';
+import Page from '../layout/Page.astro';
 import maxwell from "../assets/maxwell.webp";
 import {Image} from 'astro:assets';
 ---
 
-<Layout title="😼 Kittech's place 😼">
+<Page title="😼 Kittech's place 😼">
     <Image src={maxwell} alt="Construction"/>
-</Layout>
+</Page>
