Fixed font and images

--- a/src/component/Navbar.astro
+++ b/src/component/Navbar.astro
@@ -1,12 +1,12 @@
 ---
 import Link from "./Link.astro";
 ---
-<nav>
-    <Link class="neon-font" href="/#">Main</Link>
-    <Link class="neon-font" href="/aboutme">About me</Link>
-    <Link class="neon-font" href="/places">Places</Link>
-    <Link class="neon-font" href="/distributism">Distributism</Link>
-    <Link class="neon-font" href="/books">Books I read</Link>
-    <Link class="neon-font" href="/projects">Projects</Link>
+<nav class="neon-font">
+    <Link href="/#">Main</Link>
+    <Link href="/aboutme">About me</Link>
+    <Link href="/places">Places</Link>
+    <Link href="/distributism">Distributism</Link>
+    <Link href="/books">Books I read</Link>
+    <Link href="/projects">Projects</Link>
 </nav>
 
