--- a/src/pages/places/index.astro
+++ b/src/pages/places/index.astro
@@ -3,17 +3,17 @@ import Page from "../../layout/Page.astro";
 import Link from "../../component/Link.astro";
 ---
 <Page title="😼 Kittech's place 😼">
-    <h3 class="left-text">
-        <Link class="neon-font"
-              href="https://github.com/kittech0"
-              newPage="true"
+    <h3 class="left-text neon-font">
+        <Link
+                href="https://github.com/kittech0"
+                newPage="true"
         >GitHub
         </Link>
     </h3>
-    <h3 class="left-text">
-        <Link class="neon-font"
-              href="https://modrinth.com/user/kittech"
-              newPage="true"
+    <h3 class="left-text neon-font">
+        <Link
+                href="https://modrinth.com/user/kittech"
+                newPage="true"
         >Modrinth
         </Link>
     </h3>
