--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,5 @@ import {Image} from 'astro:assets';
 ---
 
 <Page title="😼 Kittech's place 😼">
-    <Image src={maxwell} alt="Construction"/>
+    <Image style="max-width: 100%;" src={maxwell} alt="Construction"/>
 </Page>
