Added link and public link

--- a/src/component/Footer.astro
+++ b/src/component/Footer.astro
@@ -1,3 +1,6 @@
-<footer style={{margin: "10em auto", textAlign: "center",}}>
-    <p class="radon-font">Made by kittech 😼</p>
+---
+import Link from "./Link.astro";
+---
+<footer class="radon-font" style={{margin: "10em auto", textAlign: "center",}}>
+    <Link href="https://github.com/kittech0/kitty.engineer" newPage="true">Made by kittech 😼</Link>
 </footer>
