--- a/src/pages/distributism/index.astro
+++ b/src/pages/distributism/index.astro
@@ -7,23 +7,23 @@ import Link from "../../component/Link.astro";
     <h3 class="radon-font left-text">Writings by Popes</h3>
     <ol class="neon-font left-text">
         <li>
-            <Link _class="neon-font"
-                  href="https://www.vatican.va/content/leo-xiii/en/encyclicals/documents/hf_l-xiii_enc_15051891_rerum-novarum.html"
-                  newPage="true"
+            <Link
+                    href="https://www.vatican.va/content/leo-xiii/en/encyclicals/documents/hf_l-xiii_enc_15051891_rerum-novarum.html"
+                    newPage="true"
             >Rerum Novarum
             </Link>
         </li>
         <li>
-            <Link _class="neon-font"
-                  href="https://www.vatican.va/content/pius-xi/en/encyclicals/documents/hf_p-xi_enc_19310515_quadragesimo-anno.html"
-                  newPage="true"
+            <Link
+                    href="https://www.vatican.va/content/pius-xi/en/encyclicals/documents/hf_p-xi_enc_19310515_quadragesimo-anno.html"
+                    newPage="true"
             >Quadragesimo Anno
             </Link>
         </li>
         <li>
-            <Link _class="neon-font"
-                  href="https://www.vatican.va/content/john-paul-ii/en/encyclicals/documents/hf_jp-ii_enc_14091981_laborem-exercens.html"
-                  newPage="true"
+            <Link
+                    href="https://www.vatican.va/content/john-paul-ii/en/encyclicals/documents/hf_jp-ii_enc_14091981_laborem-exercens.html"
+                    newPage="true"
             > Laborem Exercens
             </Link>
         </li>
