--- a/src/component/Body.astro
+++ b/src/component/Body.astro
@@ -20,5 +20,8 @@ const {title} = Astro.props;
         padding: 1em;
         font-size: clamp(0.875rem, 0.75rem + 0.5vw, 1.125rem);
         line-height: 1.6;
+
+        background-color: var(--body-bg);
+        color: var(--text-color);
     }
 </style>
