--- a/src/component/Head.astro
+++ b/src/component/Head.astro
@@ -18,3 +18,8 @@ const {title} = Astro.props;
 <meta content="https://kitty.engineer/" property="og:url"/>
 <meta content={title} property="og:title"/>
 <meta content="Silly IT guy that also is catholic." property="og:description"/>
+
+
+<script src="../script/language.ts"/>
+
+<script src="../script/theme.ts"/>
