--- a/src/pages/books/index.astro
+++ b/src/pages/books/index.astro
@@ -1,6 +1,31 @@
 ---
 import Page from "../../layout/Page.astro";
+import Link from "../../component/Link.astro";
 ---
-<Page title="😼 Kittech's place 😼">
-    <h2 class="radon-font">Empty</h2>
+<Page title="😼 Kittech's books 😼">
+    <h2 class="radon-font">Books i read fully</h2>
+    <ol class="neon-font left-text">
+        <li>
+            The Doll
+            ~ Bolesław Prus
+        </li>
+        <li>
+            Crime and Punishment
+            ~ Fyodor Dostoevsky
+        </li>
+        <li>
+            The Wedding
+            ~ Stanisław Wyspiański
+        </li>
+    </ol>
+    <h2 class="radon-font">Books i'm reading</h2>
+    <ol class="neon-font left-text">
+        <li>
+            Bible
+        </li>
+        <li>
+            Bible
+        </li>
+    </ol>
+    <h2 class="radon-font">Books i will read</h2>
 </Page>
