--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,6 +1,6 @@
 ---
 import Page from "../../layout/Page.astro";
 ---
-<Page title="😼 Kittech's place 😼">
-    <h2 class="radon-font">Empty</h2>
+<Page title="😼 Kittech's projects 😼">
+    <h2 data-translation="empty" class="radon-font">%empty%</h2>
 </Page>
