--- a/src/component/Footer.astro
+++ b/src/component/Footer.astro
@@ -2,5 +2,7 @@
 import Link from "./Link.astro";
 ---
 <footer class="radon-font" style={{margin: "10em auto", textAlign: "center",}}>
-    <Link href="https://github.com/kittech0/kitty.engineer" newPage="true">Made by kittech 😼</Link>
+    <Link href="https://github.com/kittech0/kitty.engineer" newPage="true">
+        <p data-translation="footer">%footer%</p>
+    </Link>
 </footer>
