--- a/src/pages/aboutme/index.astro
+++ b/src/pages/aboutme/index.astro
@@ -1,12 +1,8 @@
 ---
 import Page from "../../layout/Page.astro";
 ---
-<Page title="😼 Kittech's place 😼">
-    <p class="neon-font left-text">
-        Hello, I'm kittech.
-        My hobby is programming and theology.
-        I'm right now student of IT and plan to become an IT specialist.
-        My favorite programming language is 🦀rust🦀 and
-        on my laptop I use Fedora Linux.
+<Page title="😼 About Kittech 😼">
+    <p data-translation="aboutme" class="neon-font left-text">
+        %aboutme%
     </p>
 </Page>
