--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Page from '../layout/Page.astro';
 import maxwell from "../assets/maxwell.webp";
-import {Image} from 'astro:assets';
 import Picture from 'astro/components/Picture.astro';
+import Language from "../component/Language.astro";
 ---
 
 <Page title="😼 Kittech's place 😼">
