--- a/src/component/Navbar.astro
+++ b/src/component/Navbar.astro
@@ -2,11 +2,11 @@
 import Link from "./Link.astro";
 ---
 <nav class="neon-font">
-    <Link href="/">Main</Link>
+    <Link href="/#">Main</Link>
     <Link href="/aboutme">About me</Link>
     <Link href="/places">Places</Link>
     <Link href="/distributism">Distributism</Link>
-    <Link href="/books">Books</Link>
+    <Link href="/books">Books I read</Link>
     <Link href="/projects">Projects</Link>
 </nav>
 
