--- a/src/component/Title.astro
+++ b/src/component/Title.astro
@@ -1,7 +1,8 @@
 ---
 interface Props {
-    title: string
+    title: string;
 }
-const {title} = Astro.props;
+const { title } = Astro.props;
 ---
+
 <h1 class="radon-font">{title}</h1>
