--- a/src/pages/aboutme/index.astro
+++ b/src/pages/aboutme/index.astro
@@ -1,8 +1,7 @@
 ---
 import Page from "../../layout/Page.astro";
 ---
+
 <Page title="😼 About Kittech 😼">
-    <p data-translation="aboutme" class="neon-font left-text">
-        %aboutme%
-    </p>
+    <p data-translation="aboutme" class="neon-font left-text">%aboutme%</p>
 </Page>
