--- a/src/component/Body.astro
+++ b/src/component/Body.astro
@@ -1,17 +1,17 @@
 ---
 import Main from "./Main.astro";
 import Footer from "./Footer.astro";
-import Title from "./Title.astro"
 interface Props {
-    title: string
+    title: string;
 }
-const {title} = Astro.props;
+const { title } = Astro.props;
 ---
+
 <body>
-<Main title={title}>
-    <slot/>
-</Main>
-<Footer/>
+    <Main title={title}>
+        <slot />
+    </Main>
+    <Footer />
 </body>
 
 <style lang="scss">
