--- a/src/component/ChangeTheme.astro
+++ b/src/component/ChangeTheme.astro
@@ -1,5 +1,6 @@
-<button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
-
+<button aria-label="Toggle dark mode" id="mode-toggle" class="neon-font"
+    >☀️</button
+>
 
 <style lang="scss">
     #mode-toggle {
@@ -18,8 +19,9 @@
         cursor: pointer;
         font-size: 1.4em;
         outline-offset: 0;
-        transition: background-color 0.2s ease-in,
-        transform 0.1s ease-in;
+        transition:
+            background-color 0.2s ease-in,
+            transform 0.1s ease-in;
 
         &:hover {
             background-color: var(--link-visited-color);
