--- a/src/component/Footer.astro
+++ b/src/component/Footer.astro
@@ -1,7 +1,8 @@
 ---
 import Link from "./Link.astro";
 ---
-<footer class="radon-font" style={{margin: "10em auto", textAlign: "center",}}>
+
+<footer class="radon-font" style={{ margin: "10em auto", textAlign: "center" }}>
     <Link href="https://github.com/kittech0/kitty.engineer" newPage="true">
         <p data-translation="footer">%footer%</p>
     </Link>
