--- a/src/component/Language.astro
+++ b/src/component/Language.astro
@@ -1,5 +1,7 @@
 <div id="lang-selector">
-    <button id="lang-btn" aria-label="Select language">🇬🇧</button>
+    <button id="lang-btn" aria-label="Select language" class="neon-font"
+        >🇬🇧</button
+    >
     <div id="lang-list">
         <div data-lang="en">🇬🇧 English</div>
         <div data-lang="pl">🇵🇱 Polski</div>
@@ -26,8 +28,9 @@
         cursor: pointer;
         font-size: 1.4em;
         outline-offset: 0;
-        transition: background-color 0.2s ease-in,
-        transform 0.1s ease-in;
+        transition:
+            background-color 0.2s ease-in,
+            transform 0.1s ease-in;
 
         &:hover {
             background-color: var(--link-visited-color);
@@ -58,8 +61,9 @@
         border: none;
         cursor: pointer;
         outline-offset: 0;
-        transition: background-color 0.2s ease-in,
-        transform 0.1s ease-in;
+        transition:
+            background-color 0.2s ease-in,
+            transform 0.1s ease-in;
     }
 
     #lang-list div {
@@ -75,5 +79,3 @@
         display: block;
     }
 </style>
-
-
