--- a/src/component/Main.astro
+++ b/src/component/Main.astro
@@ -4,16 +4,17 @@ import Title from "./Title.astro";
 import ChangeTheme from "./ChangeTheme.astro";
 import Language from "./Language.astro";
 interface Props {
-    title: string
+    title: string;
 }
-const {title} = Astro.props;
+const { title } = Astro.props;
 ---
+
 <main>
-    <ChangeTheme/>
-    <Language/>
-    <Title title={title}/>
-    <Navbar/>
-    <slot/>
+    <ChangeTheme />
+    <Language />
+    <Title title={title} />
+    <Navbar />
+    <slot />
 </main>
 
 <style lang="scss">
@@ -27,6 +28,5 @@ const {title} = Astro.props;
         position: relative;
         box-shadow: var(--text-color) 0 0 1em;
         background-color: var(--main-bg);
-
     }
 </style>
