--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
-import Page from '../layout/Page.astro';
+import Page from "../layout/Page.astro";
 import maxwell from "../assets/maxwell.webp";
-import Picture from 'astro/components/Picture.astro';
-import Language from "../component/Language.astro";
+import Picture from "astro/components/Picture.astro";
 ---
 
 <Page title="😼 Kittech's place 😼">
-    <Picture style="max-width: 100%;" src={maxwell} alt="Construction"/>
+    <Picture style="max-width: 100%;" src={maxwell} alt="Construction" />
 </Page>
